--- a/app_go/configs/config.json
+++ b/app_go/configs/config.json
@@ -1,5 +1,6 @@
 {
     "port": "5000",
     "images_dir": "./static/images",
-    "log_file": "logs/server.log"
+    "log_file": "logs/server.log",
+    "port_metrics": "8080"
 }
