fix README.md and docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
-      - "5000:5000"
+      - "${PORT_METRICS:-8080}:8080"
+      - "${PORT_WEB:-5000}:5000"
     depends_on:
       postgres: 
         condition: service_healthy # Ждём запуска Postgres
