--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,13 +20,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Docker
-        uses: docker/setup-qemu-action@v2
-        if: ${{ false }}  # Отключаем, если не нужна поддержка ARM
-
-      - name: Set up Docker Compose
-        uses: docker/setup-buildx-action@v2
-        if: ${{ false }}  # Отключаем, если не нужен Buildx
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin
+          docker compose version  # Проверка
 
       - name: Start services
         run: |
