--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,4 +59,4 @@ jobs:
 
       - name: Cleanup (containers down)
         if: always()
-        run: docker-compose down
+        run: docker compose down
