--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,12 +3,12 @@ name: ci-cd
 on:
   push:
     branches:
-      - main   # Запускать пайплайн при пуше в ветку main
-      - v0.3
+      #- main   # Запускать пайплайн при пуше в ветку main
+      - v0.4
     workflow_dispatch:
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -60,3 +60,31 @@ jobs:
       - name: Cleanup (containers down)
         if: always()
         run: docker compose down
+
+  deploy:  
+    runs-on: ubuntu-latest
+    #needs: tests 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Resolve DNS
+        run: |
+          echo "Проверка DNS:"
+          nslookup ${{ secrets.SERVER_DNS }}
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | base 64 > ~/.ssh/webserver
+          chmod 600 ~/.ssh/webserver
+          # Добавляем сервер в known_hosts (замените your-server-ip)
+          ssh-keyscan -T 10 ${{ secrets.SERVER_DNS }} >> ~/.ssh/known_hosts
+
+      - name: Install ansible on runner
+        run: pip install ansible
+
+      - name: Starting ansible
+        run: |
+          cd ansible/
+          ansible-playbook playbook.yaml     
