--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,7 +76,7 @@ jobs:
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | base64 -d > ~/.ssh/webserver
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/webserver
           chmod 600 ~/.ssh/webserver
           # Добавляем сервер в known_hosts (замените your-server-ip)
           ssh-keyscan -T 10 ${{ secrets.SERVER_DNS }} >> ~/.ssh/known_hosts
