--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -86,5 +86,7 @@ jobs:
 
       - name: Starting ansible
         run: |
+          echo ./
+          ls ./
           cd ansible/
-          ansible-playbook playbook.yaml     
+          ansible-playbook playbook.yaml -vvv    
