--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,9 +94,4 @@ jobs:
           pwd
           cd ansible/
           ls -la ~/.ssh/
-          # Проверяем, что файл существует и не пустой
-          if [ ! -f ~/.ssh/webserver ]; then
-            echo "Файл ключа не найден!"
-            exit 1
-          fi
-          ansible all -i inventory/hosts -m ping  
+          ansible webserver -i inventory/hosts -m ping --config=./ansible.cfg  
