--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory = inventory/hosts  # (опционально) автоматически подхватывает инвентарь
+inventory = ./inventory/hosts  # (опционально) автоматически подхватывает инвентарь
 private_key_file = ~/.ssh/webserver  # SSH-ключ
 remote_user = deployer  # пользователь для подключения
