--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,6 @@
 inventory = ./inventory/hosts  # (опционально) автоматически подхватывает инвентарь
 private_key_file = ~/.ssh/webserver  # SSH-ключ
 remote_user = deployer  # пользователь для подключения
+
+[inventory]
+enable_plugins = ini, yaml, script
