rm #comments from  ansible.cfg and hosts

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
-inventory = ./inventory/hosts  # (опционально) автоматически подхватывает инвентарь
-private_key_file = ~/.ssh/webserver  # SSH-ключ
-remote_user = deployer  # пользователь для подключения
+inventory = ./inventory/hosts
+private_key_file = ~/.ssh/webserver
+remote_user = deployer
 
 [inventory]
 enable_plugins = ini, yaml, script
