--- a/ansible/roles/app/tasks/main.yaml
+++ b/ansible/roles/app/tasks/main.yaml
@@ -21,7 +21,31 @@
       POSTGRES_DB=messages
       POSTGRES_HOST=postgres
       POSTGRES_PORT=5432
+      TELEGRAM_BOT_TOKEN={{ telegram_bot_token }}
+      TELEGRAM_CHAT_ID={{ telegram_chat_id }}
     mode: '0644'
+
+- name: Ensure alertmanager directory exists
+  ansible.builtin.file:
+    path: "{{ app_dir }}/alertmanager"
+    state: directory
+    mode: '0755'
+
+- name: Install gettext for envsubst
+  become: yes
+  apt:
+    name: gettext-base
+    state: present
+  when: ansible_os_family == 'Debian'
+
+- name: Generate alertmanager.yml from template
+  ansible.builtin.shell: |
+    envsubst < "{{ app_dir }}/alertmanager/alertmanager.yml.template" > "{{ app_dir }}/alertmanager/alertmanager.yml"
+  environment:
+    TELEGRAM_BOT_TOKEN: "{{ telegram_bot_token }}"
+    TELEGRAM_CHAT_ID: "{{ telegram_chat_id }}"
+  args:
+    executable: /bin/sh
 
 - name: Run Docker Compose
   command: docker compose up -d --force-recreate 
