renew push targets

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,8 +3,8 @@ name: ci-cd
 on:
   push:
     branches:
-      #- main   # Запускать пайплайн при пуше в ветку main
-      - v0.4
+      - main   # Запускать пайплайн при пуше в ветку main
+      #- v0.4
     workflow_dispatch:
 
 jobs:
