--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run services
         run: |
-          docker compose up -d
+          docker compose up -d app postgress
           docker compose ps
 
       - name: Waiting connect to webserver
