add localhost ansible

--- a/ansible/inventory/group_vars/webserver.yaml
+++ b/ansible/inventory/group_vars/webserver.yaml
@@ -1,7 +1,4 @@
 ---
 # Настройки специфичные для production
-app_dirr: /opt/goserv
-docker_users:
-  - deploy_user
-  - www-data
+app_dir: "{{ ansible_user_dir }}/web_go"
 max_connections: 100
