--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,8 +3,7 @@ name: ci-cd
 on:
   push:
     branches:
-      - main   # Запускать пайплайн при пуше в ветку main
-      #- v0.4
+      - main
     workflow_dispatch:
 
 jobs:
